Basic structure of the Filters created along with basic css. // TODO Functionality: Functions for apply filters to database

--- a/client/src/css/FilterContainerCss.css
+++ b/client/src/css/FilterContainerCss.css
@@ -1,5 +1,24 @@
-.filter-container div
+.filter-container
 {
-    border-color: black;
-    width: 200px;
+    border: 2px solid black;
+    width: 280px;
+    padding: 20px;
 }
+
+.filter-container input[type=checkbox]
+{
+    width: 20px;
+    height: 20px;
+}
+
+.checkbox-filters
+{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.filter-container label
+{
+    font-weight: 700;
+}
+
