--- a/client/src/css/FilterContainerCss.css
+++ b/client/src/css/FilterContainerCss.css
@@ -3,12 +3,17 @@
     border: 2px solid black;
     width: 280px;
     padding: 20px;
+    margin: 20px;
 }
 
 .filter-container input[type=checkbox]
 {
     width: 20px;
     height: 20px;
+}
+.filter-container label
+{
+    font-weight: 700;
 }
 
 .checkbox-filters
@@ -17,8 +22,12 @@
     flex-direction: row;
     justify-content: space-around;
 }
-.filter-container label
+.checkbox-button
 {
-    font-weight: 700;
+    margin: 10px;
+    display: flex;
+    justify-content: center;
 }
+
+
 
