--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -144,3 +144,11 @@ color:pink;
 
 
 /*end of table of cars */
+
+
+.testing-container{
+    margin:50px;
+    padding:50px 50px 50px 50px;
+    border: black solid 3px;
+    display:flex;
+}
