--- a/client/src/css/NavBar.css
+++ b/client/src/css/NavBar.css
@@ -6,15 +6,17 @@
     top: 0;
     width: 100%;
     z-index: 500;
+    padding-bottom:10px;
 }
 
 .logo-container > img {
+    padding-top: 10px;
     width: 200px;
 }
 
 .search-bar {
-    padding-left: 1000px;
-    margin-bottom: 100px;
+    /*padding-right: 500px;*/
+    /*margin-bottom: 100px;*/
 }
 
 /*.search-bar > button#Search {*/
@@ -26,17 +28,17 @@
 
 .search-bar > #search{
     height: 35px;
-    border-radius: 5px;
-    width: 300px;
+    border-radius: 15px;
+    width: 400px;
 }
 
-.search-bar > img{
-    /*padding: 5px;*/
-    /*width: 150px;*/
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
+/*.search-bar > img{*/
+/*    padding: 5px;*/
+/*    width: 150px;*/
+/*    display: block;*/
+/*    margin-left: auto;*/
+/*    margin-right: auto;*/
+/*}*/
 
 .searchIcon > img{
     width: 50px;
@@ -52,11 +54,17 @@
 
 .container{
     display: flex;
+
+    float: right;
+    /*width: 30%;*/
+    /*padding:5px;*/
 }
 
 .icons-container{
     float: left;
-    width: 33.33%;
-    padding: 5px;
+    /*width: 25%;*/
 }
 
+.search-container{
+    padding-right: 400px;
+}
