--- a/client/src/css/NavBar.css
+++ b/client/src/css/NavBar.css
@@ -2,12 +2,15 @@
     background-color: #8EAF9D;
     position: fixed;
     width: 100%;
-    /*padding-bottom:10px;*/
-    /*padding-top: 0;*/
 }
 
 .logo-container > img {
-    /*padding-top: 0;*/
+    z-index: 500;
+    padding-bottom:10px;
+}
+
+.logo-container > img {
+    padding-top: 10px;
     width: 200px;
     padding-right: 30px;
 
@@ -44,7 +47,17 @@ input[type="text" i] {
     font-size: 16px;
     font-weight: bold;
     padding-left: 5px;
+border-radius: 15px;
+    width: 400px;
 }
+
+/*.search-bar > img{*/
+/*    padding: 5px;*/
+/*    width: 150px;*/
+/*    display: block;*/
+/*    margin-left: auto;*/
+/*    margin-right: auto;*/
+/*}*/
 
 /*.search-bar > img{*/
 /*    padding: 5px;*/
@@ -70,12 +83,15 @@ input[type="text" i] {
 .container {
     display: flex;
     float: right;
+    /*width: 30%;*/
+    /*padding:5px;*/
 }
 
 .icons-container {
     float: left;
     padding-right: 30px;
     padding-top: 10px;
+    /*width: 25%;*/
 }
 
 .search-container {
