--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -25,18 +25,36 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 500px;
+    width: 450px;
     border-left:thin solid #8c8787;
-    padding: 20px;
-    border-radius: 5px;
+    padding: 40px;
+    border-radius: 50px;
     background: #8c8787;
 }
 .error-message
 {
-    width:60%;
+    width: 60%;
     text-align: left;
-    font-size:15px;
+    font-size: 15px;
     color: red;
+    background-color: white;
+    padding: 10px;
+    border-radius: 20px;
+}
+.password-error-container {
+    background-color: white;
+    width:60%;
+    border-radius: 20px;
+    padding:10px;
+}
+.password-error-container div {
+    text-align: left;
+    font-size: 15px;
+    color: red;
+    background-color: white;
+    padding: 5px;
+    border-radius: 20px;
+
 }
 .register-container input[type="text"],
 .register-container input[type="email"],
@@ -46,7 +64,7 @@
     padding: 10px;
     font-size: 16px;
     margin-bottom: 20px;
-    border-radius: 5px;
+    border-radius: 100px;
     border: 1px solid #ccc;
 }
 .register-buttons
