--- a/client/src/Nav.scss
+++ b/client/src/Nav.scss
@@ -5,6 +5,7 @@ $title_font: Times New Roman, Serif, serif;
   background-color: $light_green;
   position: fixed;
   width: 100%;
+  z-index: 1000;
 
   .container {
     display: flex;
@@ -22,7 +23,7 @@ $title_font: Times New Roman, Serif, serif;
       padding-left: 250px;
 
       input[type="text" i] {
-        font-family:  $title_font;
+        font-family: $title_font;
         font-size: 16px;
         font-weight: bold;
         padding-left: 5px;
