--- a/client/src/ShoppingCart.scss
+++ b/client/src/ShoppingCart.scss
@@ -1,33 +1,37 @@
 @import "Nav.scss";
 @import "Admin.scss";
 
+.shopping-bag-head-container {
+  padding-top: 0;
+}
+
 .bag-container {
+  width: 80%;
 
-  .shopping-bag-header {
+  h1 {
+    font-size: $title_font_size;
+    font-family: $title_font;
+  }
 
-    .bag {
+  h2 {
+    font-size: $title_font_size;
+    font-family: $title_font;
+  }
 
-      .bag > h1 {
-        font-size: $title_font_size;
-        font-family: $title_font;
-      }
+  .tshirt-container {
 
-      .bag > h2 {
+  }
 
-      }
+  .checkout-buttons {
+    background-color: $light_blue;
+    font-family: $title-font;
+    font-size: $title_font_size;
+  }
 
-      .bag-checkout button {
-        background-color: $light_blue;
-        font-family: $title-font;
-        font-size: $title_font_size;
-
-        .bag-checkout button:hover {
-          background-color: $mint_green;
-          border-color: $grey-border;
-        }
-      }
-
-
-    }
+  .checkout-buttons > button:hover {
+    background-color: $mint_green;
+    border-color: $grey-border;
   }
 }
+
+
