Working on shoppingCart
I also created an AccountPage and footer files. I created a temporary shopping.css file as I am having issues with mapping the scss files to css.

--- a/client/src/Nav.scss
+++ b/client/src/Nav.scss
@@ -5,10 +5,12 @@ $title_font: Times New Roman, Serif, serif;
   background-color: $light_green;
   position: fixed;
   width: 100%;
+  z-index: 1000;
+}
 
-  .container {
-    display: flex;
-    float: right;
+  //.container {
+  //  display: flex;
+  //  float: right;
 
     .logo-container > img {
       padding-top: 10px;
@@ -53,8 +55,8 @@ $title_font: Times New Roman, Serif, serif;
         width: 50px;
       }
     }
-  }
-}
+
+
 
 
 
