--- a/client/src/css/Admin.css
+++ b/client/src/css/Admin.css
@@ -210,9 +210,11 @@
 
 /* Admin product edit */
 .admin-edit-product {
+  padding-top: 75px;
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+}
 
 .edit-form {
   width: 50%;
