--- a/client/src/css/NavBar.css
+++ b/client/src/css/NavBar.css
@@ -1,58 +1,69 @@
 .nav-container {
-  background-color: #8EAF9D;
+  background-color: #A26D5D;
   position: fixed;
   width: 100%;
   height: 55px;
-  z-index: 1000; }
-
-.logo-container {
-  padding-top: 10px;
-  padding-left: 30px;
-  margin: auto; }
+  z-index: 1000;
+  justify-content: space-between;
+  align-items: center; }
 
 .container {
   display: flex;
-  float: right; }
-
-.logo-container > img {
-  width: 175px;
-  padding-top: 20px;
-  padding-bottom: 20px; }
+  align-items: center; }
 
 .search-container {
-  float: left;
-  padding-top: 10px;
-  padding-right: 30px;
-  padding-left: 30px; }
-  .search-container input[type="text" i] {
-    font-family: Times New Roman, Serif, serif;
-    font-size: 16px;
-    font-weight: bold; }
-  .search-container .search-bar {
-    display: inline-block;
-    vertical-align: middle; }
-  .search-container .search-bar > #search {
-    border-color: white;
-    border-radius: 0;
-    border-style: outset;
-    width: 325px;
-    height: 35px; }
+  display: flex;
+  align-items: center;
+  padding-left: 20px;
+  padding-bottom: 75px; }
+
+.search-bar {
+  border-color: white;
+  border-radius: 0;
+  border-style: outset;
+  display: inline-block;
+  vertical-align: middle; }
+
+.search-bar > #search {
+  font-family: Times New Roman, Serif, serif;
+  font-size: 16px;
+  font-weight: bold;
+  width: 310px;
+  height: 30px;
+  border: none;
+  outline: none; }
+
+.searchIcon > img {
+  width: 30px;
+  height: 30px; }
 
 .icons-container {
-  float: left;
-  padding-right: 30px;
-  padding-top: 10px; }
-  .icons-container .searchIcon > img {
-    width: 40px;
-    height: 35px; }
-  .icons-container .account > img {
-    width: 35px;
-    height: 35px;
-    /*padding-top: 7.5px;*/
-    padding-bottom: 20px; }
-  .icons-container .shopping-bag > img {
-    width: 40px;
-    height: 35px;
-    padding-bottom: 20px; }
+  display: flex; }
+
+.icons-container > .logo-image {
+  display: flex;
+  margin: auto; }
+
+.logo-image > img {
+  width: 300px;
+  padding-bottom: 65px;
+  padding-left: 225px;
+  padding-right: 200px; }
+
+.icons-container > .searchIcon {
+  margin-left: 10px; }
+
+.account > img {
+  width: 35px;
+  height: 30px;
+  padding-bottom: 60px;
+  padding-left: 300px; }
+
+.shopping-bag > img {
+  width: 40px;
+  height: 30px;
+  padding-bottom: 60px;
+  padding-left: 10px;
+  padding-right: 20px; }
 
 /*# sourceMappingURL=NavBar.css.map */
