--- a/client/src/Admin.scss
+++ b/client/src/Admin.scss
@@ -228,12 +228,20 @@ body{
 
 
 /* Admin product edit */
+
 .admin-edit-product  {
   display:flex;
   flex-direction: column;
   align-items: center;
 
 }
+.admin-create-product  {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.create-form,
 .edit-form {
   width: 50%;
   padding: 20px;
@@ -241,24 +249,32 @@ body{
   border-radius: 5px;
   background-color: #f9f9f9;
 }
+.create-form,
 .edit-form label {
   font-size: 30px;
   font-weight: bold;
 }
+.create-input,
 .edit-input {
   margin-bottom: 15px;
 }
 
+.create-input input,
 .edit-input input {
   width: 100%;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
 }
+.create-input input[type="text"],
 .edit-input input[type="text"] {
   width: calc(100% - 22px); /* Adjusted to account for padding and border */
   font-size: 20px;
   font-weight: lighter;
+}
+
+.size-selector {
+
 }
 
 
