--- a/client/src/Admin.scss
+++ b/client/src/Admin.scss
@@ -240,7 +240,9 @@ body{
   flex-direction: column;
   align-items: center;
 }
+.create-form{
 
+}
 .create-form,
 .edit-form {
   width: 50%;
@@ -273,8 +275,20 @@ body{
   font-weight: lighter;
 }
 
+.size-option label { /* label and input styles for size-option were taken from https://stackoverflow.com/questions/306252/how-to-align-checkboxes-and-their-labels-consistently-cross-browsers*/
+  font-size:20px;
+}
+.size-option input {
+  width: 13px;
+  height: 13px;
+  margin-right: 5px;
+}
 .size-selector {
-
+  display: flex;
+  flex-direction: column;
+}
+.invalid-create-input {
+  border: 2px solid red;
 }
 
 
