--- a/client/src/css/Admin.css
+++ b/client/src/css/Admin.css
@@ -1,5 +1,7 @@
+@charset "UTF-8";
 body {
-  background-color: #efe6e6; }
+  background-color: #efe6e6;
+}
 
 /* AdminControls */
 .controls-container {
@@ -8,44 +10,51 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  /* Button style */ }
-  .controls-container .controls-button {
-    display: inline-block;
-    padding: 10px 20px;
-    font-size: 16px;
-    font-weight: bold;
-    text-transform: uppercase;
-    color: black;
-    background-color: #ccb1a7;
-    border: 2px solid #ffffff;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    text-decoration: none;
-    margin-right: 10px;
-    font-family: Times New Roman, Serif, serif; }
-  .controls-container .controls-button:hover {
-    background-color: #A26D5D;
-    border-color: #363131; }
+  /* Button style */
+}
+.controls-container .controls-button {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: black;
+  background-color: #ccb1a7;
+  border: 2px solid #ffffff;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  text-decoration: none;
+  margin-right: 10px;
+  font-family: Times New Roman, Serif, serif;
+}
+.controls-container .controls-button:hover {
+  background-color: #A26D5D;
+  border-color: #363131;
+}
 
 /* AdminTable */
 .admin-head-container {
-  padding-bottom: 75px; }
+  padding-bottom: 75px;
+}
 
 .admin-body-container {
-  display: flex; }
+  display: flex;
+}
 
 .admin-table-container {
   width: 90%;
   display: flex;
   /*justify-content: center;*/
   border-color: #363131;
-  border-radius: 5px; }
-  .admin-table-container .admin-table-container table {
-    width: 100%;
-    border-collapse: collapse;
-    font-family: Arial, sans-serif;
-    border-color: #363131; }
+  border-radius: 5px;
+}
+.admin-table-container .admin-table-container table {
+  width: 100%;
+  border-collapse: collapse;
+  font-family: Arial, sans-serif;
+  border-color: #363131;
+}
 
 .admin-table-container thead {
   background-color: #A26D5D;
@@ -54,92 +63,107 @@ body {
   text-transform: capitalize;
   text-align: center;
   font-weight: bold;
-  font-family: Times New Roman, Serif, serif; }
+  font-family: Times New Roman, Serif, serif;
+}
 
 .admin-table-container thead :hover {
-  border-color: #363131; }
+  border-color: #363131;
+}
 
 .admin-table thead th,
 .admin-table-container tbody td {
   padding: 10px;
   font-size: 16px;
-  text-align: center; }
+  text-align: center;
+}
 
 .admin-table-container tbody tr {
   border-bottom: 1px solid #363131;
   background-color: rgba(239, 241, 232, 0.69);
-  position: relative; }
+  position: relative;
+}
 
 .admin-table-container tbody tr:hover {
   background-color: #e5e3e3;
-  transition: background-color 0.6s ease; }
+  transition: background-color 0.6s ease;
+}
 
 .admin-table-container tbody tr:hover td {
   color: transparent;
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 .admin-table-container tbody tr:hover::after {
-  content: "\1F50D";
+  content: "🔍";
   font-size: 20px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 1; }
+  z-index: 1;
+}
 
 .admin-table-container table {
   border-color: #363131;
-  border-radius: 5px; }
+  border-radius: 5px;
+}
 
 .add-new-product {
   display: flex;
   justify-content: center;
-  margin-top: 20px; }
+  margin-top: 20px;
+}
 
 /* Filters */
 .filter-container {
   width: 300px;
   padding: 20px;
   border-radius: 5px;
-  /* Styling for filter dropdown menus */ }
-  .filter-container .filter-buttons {
-    margin: 10px;
-    display: flex;
-    justify-content: center; }
-  .filter-container .filter-dropdown.open .filter-dropdown-menu {
-    display: block; }
-  .filter-container .filter-dropdown-menu {
-    display: none;
-    top: 0;
-    left: 100%;
-    background-color: #B9CDDA;
-    border: 1px solid #ffffff;
-    padding: 10px;
-    z-index: 1; }
-  .filter-container .filter-dropdown-menu label {
-    display: flex;
-    align-items: center;
-    margin-bottom: 5px; }
-  .filter-container .filter-dropdown-toggle {
-    width: 100%;
-    color: #ffffff;
-    background-color: #A6D8D4;
-    /*  Change the color of the buttons for the filters here caitlin , hover is below this*/
-    border: 1px solid #ffffff;
-    border-radius: 3px;
-    padding: 8px 12px;
-    cursor: pointer;
-    transition: background-color 0.8ms ease;
-    text-align: left;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    font-family: Times New Roman, Serif, serif;
-    font-size: 16px;
-    font-weight: bold; }
-  .filter-container .filter-dropdown-toggle:hover {
-    background-color: #8EAF9D;
-    border-color: #363131; }
+  /* Styling for filter dropdown menus */
+}
+.filter-container .filter-buttons {
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+}
+.filter-container .filter-dropdown.open .filter-dropdown-menu {
+  display: block;
+}
+.filter-container .filter-dropdown-menu {
+  display: none;
+  top: 0;
+  left: 100%;
+  background-color: #B9CDDA;
+  border: 1px solid #ffffff;
+  padding: 10px;
+  z-index: 1;
+}
+.filter-container .filter-dropdown-menu label {
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px;
+}
+.filter-container .filter-dropdown-toggle {
+  width: 100%;
+  color: #ffffff;
+  background-color: #A6D8D4; /*  Change the color of the buttons for the filters here caitlin , hover is below this*/
+  border: 1px solid #ffffff;
+  border-radius: 3px;
+  padding: 8px 12px;
+  cursor: pointer;
+  transition: background-color 0.8ms ease;
+  text-align: left;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-family: Times New Roman, Serif, serif;
+  font-size: 16px;
+  font-weight: bold;
+}
+.filter-container .filter-dropdown-toggle:hover {
+  background-color: #8EAF9D;
+  border-color: #363131;
+}
 
 .filter-buttons > button {
   background-color: #B9CDDA;
@@ -154,14 +178,17 @@ body {
   cursor: pointer;
   transition: all 0.3s ease;
   text-decoration: none;
-  font-family: Times New Roman, Serif, serif; }
+  font-family: Times New Roman, Serif, serif;
+}
 
 .filter-buttons > button:hover {
   background-color: #A6D8D4;
-  border-color: #363131; }
+  border-color: #363131;
+}
 
 .apply-button {
-  margin-top: 20px; }
+  margin-top: 20px;
+}
 
 .apply-button button {
   background-color: #007bff;
@@ -170,53 +197,92 @@ body {
   border-radius: 3px;
   padding: 10px 20px;
   cursor: pointer;
-  transition: background-color 0.3s ease; }
+  transition: background-color 0.3s ease;
+}
 
 .apply-button button:hover {
-  background-color: #0056b3; }
+  background-color: #0056b3;
+}
 
 /* Admin product edit */
 .admin-edit-product {
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+}
 
+.admin-create-product {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.create-form,
 .edit-form {
   width: 50%;
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  background-color: #f9f9f9; }
+  background-color: #f9f9f9;
+}
 
+.create-form,
 .edit-form label {
   font-size: 30px;
-  font-weight: bold; }
+  font-weight: bold;
+}
 
+.create-input,
 .edit-input {
-  margin-bottom: 15px; }
+  margin-bottom: 15px;
+}
 
+.create-input input,
 .edit-input input {
   width: 100%;
   padding: 10px;
   border: 1px solid #ccc;
-  border-radius: 4px; }
+  border-radius: 4px;
+}
 
-.edit-input input[type="text"] {
-  width: calc(100% - 22px);
-  /* Adjusted to account for padding and border */
+.create-input input[type=text],
+.edit-input input[type=text] {
+  width: calc(100% - 22px); /* Adjusted to account for padding and border */
   font-size: 20px;
-  font-weight: lighter; }
+  font-weight: lighter;
+}
+
+.size-option label { /* label and input styles for size-option were taken from https://stackoverflow.com/questions/306252/how-to-align-checkboxes-and-their-labels-consistently-cross-browsers*/
+  font-size: 20px;
+}
+
+.size-option input {
+  width: 13px;
+  height: 13px;
+  margin-right: 5px;
+}
+
+.size-selector {
+  display: flex;
+  flex-direction: column;
+}
+
+.invalid-create-input {
+  border: 2px solid red;
+}
 
 .stock-filter,
 .price-filter {
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+}
 
 .stock-filter h4,
 .price-filter h4 {
   margin-bottom: 10px;
   font-size: 16px;
   font-family: Times New Roman, Serif, serif;
-  color: #333; }
+  color: #333;
+}
 
 .stock-slider,
 .price-slider {
@@ -226,40 +292,44 @@ body {
   background-color: #ffffff;
   outline: none;
   opacity: 0.7;
-  transition: opacity 0.15s ease-in-out; }
+  transition: opacity 0.15s ease-in-out;
+}
 
 .stock-slider::-webkit-slider-thumb,
 .price-slider::-webkit-slider-thumb {
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  background-color: #007bff;
-  /* Primary color */
-  cursor: pointer; }
+  background-color: #007bff; /* Primary color */
+  cursor: pointer;
+}
 
 .stock-slider::-moz-range-thumb,
 .price-slider::-moz-range-thumb {
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  background-color: #007bff;
-  /* Primary color */
-  cursor: pointer; }
+  background-color: #007bff; /* Primary color */
+  cursor: pointer;
+}
 
 .testing-link-container {
   display: flex;
   justify-content: center;
   margin: 50px;
   padding: 20px;
-  border: black solid 2px; }
+  border: black solid 2px;
+}
 
 .testing-header {
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+}
 
 .red-text {
   color: red;
-  font-weight: bold; }
+  font-weight: bold;
+}
 
 /*# sourceMappingURL=Admin.css.map */
