--- a/client/src/css/Admin.css
+++ b/client/src/css/Admin.css
@@ -219,17 +219,18 @@ body {
 
 .create-form,
 .edit-form {
-  width: 50%;
-  padding: 20px;
+  width: 40%;
+  padding: 30px;
   border: 1px solid #ccc;
-  border-radius: 5px;
+  border-radius: 15px;
   background-color: #f9f9f9;
+  margin-bottom: 350px;
 }
 
-.create-form,
-.edit-form label {
-  font-size: 30px;
-  font-weight: bold;
+.form-controls {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 .create-input,
@@ -237,23 +238,29 @@ body {
   margin-bottom: 15px;
 }
 
+.form-label {
+  font-size: 20px;
+  font-weight: bold;
+}
+
 .create-input input,
 .edit-input input {
-  width: 100%;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
-}
-
-.create-input input[type=text],
-.edit-input input[type=text] {
   width: calc(100% - 22px); /* Adjusted to account for padding and border */
   font-size: 20px;
   font-weight: lighter;
 }
 
-.size-option label { /* label and input styles for size-option were taken from https://stackoverflow.com/questions/306252/how-to-align-checkboxes-and-their-labels-consistently-cross-browsers*/
-  font-size: 20px;
+.create-input input[type=text]:hover,
+.edit-input input[type=text]:hover {
+  cursor: pointer;
+}
+
+.size-selector {
+  display: flex;
+  flex-direction: column;
 }
 
 .size-option input {
@@ -262,12 +269,27 @@ body {
   margin-right: 5px;
 }
 
-.size-selector {
+.err-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
-.invalid-create-input {
+.err-container div {
+  width: 80%;
+}
+
+.err {
+  color: red;
+  font-size: 14px;
+}
+
+.create-input input.invalid-input,
+.edit-input input.invalid-input {
+  border: 2px solid red;
+}
+
+.size-selector.invalid-input {
   border: 2px solid red;
 }
 
