--- a/client/src/css/Admin.css
+++ b/client/src/css/Admin.css
@@ -46,23 +46,14 @@ body {
   width: 90%;
   display: flex;
   justify-content: center;
-  border-radius: 5px; }
-
-  .admin-table-container .admin-table-container table {
-    width: 100%;
-    border-collapse: collapse;
-    font-family: Arial, sans-serif;
-    border: 2px solid #363131;
-    border-radius: 5px; }
-  /*justify-content: center;*/
-  border-color: #363131;
   border-radius: 5px;
 }
 .admin-table-container .admin-table-container table {
   width: 100%;
   border-collapse: collapse;
   font-family: Arial, sans-serif;
-  border-color: #363131;
+  border: 2px solid #363131;
+  border-radius: 5px;
 }
 
 .admin-table-container thead {
@@ -89,8 +80,7 @@ body {
 .admin-table-container tbody tr {
   border-bottom: 1px solid #363131;
   background-color: #ffffff;
-  position: relative; }
-
+  position: relative;
 }
 
 .admin-table-container tbody tr:hover {
@@ -118,6 +108,10 @@ body {
   border-radius: 5px;
 }
 
+.sortLabel:hover {
+  cursor: pointer;
+}
+
 .add-new-product {
   display: flex;
   justify-content: center;
@@ -128,44 +122,6 @@ body {
 .filter-container {
   width: 300px;
   padding: 20px;
-  /* Styling for filter dropdown menus */ }
-  .filter-container .filter-buttons {
-    margin: 10px;
-    display: flex;
-    justify-content: center; }
-  .filter-container .filter-dropdown.open .filter-dropdown-menu {
-    display: block; }
-  .filter-container .filter-dropdown-menu {
-    display: none;
-    top: 0;
-    left: 100%;
-    padding: 10px;
-    z-index: 1; }
-  .filter-container .filter-dropdown-menu label {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-    font-family: Times New Roman, Serif, serif;
-    font-size: 16px; }
-  .filter-container .filter-dropdown-toggle {
-    width: 100%;
-    background-color: #ccb1a7;
-    /*  Change the color of the buttons for the filters here caitlin , hover is below this*/
-    border: 1px solid #ffffff;
-    border-radius: 3px;
-    padding: 8px 12px;
-    cursor: pointer;
-    transition: background-color 0.8ms ease;
-    text-align: left;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    font-family: Times New Roman, Serif, serif;
-    font-size: 14px;
-    font-weight: bold; }
-  .filter-container .filter-dropdown-toggle:hover {
-    background-color: #ffffff;
-    border-color: #363131; }
   /* Styling for filter dropdown menus */
 }
 .filter-container .filter-buttons {
@@ -180,20 +136,19 @@ body {
   display: none;
   top: 0;
   left: 100%;
-  background-color: #B9CDDA;
-  border: 1px solid #ffffff;
   padding: 10px;
   z-index: 1;
 }
 .filter-container .filter-dropdown-menu label {
   display: flex;
   align-items: center;
-  margin-bottom: 5px;
+  margin-bottom: 20px;
+  font-family: Times New Roman, Serif, serif;
+  font-size: 16px;
 }
 .filter-container .filter-dropdown-toggle {
   width: 100%;
-  color: #ffffff;
-  background-color: #A6D8D4; /*  Change the color of the buttons for the filters here caitlin , hover is below this*/
+  background-color: #ccb1a7; /*  Change the color of the buttons for the filters here caitlin , hover is below this*/
   border: 1px solid #ffffff;
   border-radius: 3px;
   padding: 8px 12px;
@@ -204,16 +159,17 @@ body {
   overflow: hidden;
   text-overflow: ellipsis;
   font-family: Times New Roman, Serif, serif;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
 }
 .filter-container .filter-dropdown-toggle:hover {
-  background-color: #8EAF9D;
+  background-color: #ffffff;
   border-color: #363131;
 }
 
-.filter-dropdown-toggle > input[type="checkbox" i] {
-  border-style: outset; }
+.filter-dropdown-toggle > input[type=checkbox i] {
+  border-style: outset;
+}
 
 .filter-buttons > button {
   background-color: #ccb1a7;
@@ -232,7 +188,7 @@ body {
 
 .filter-buttons > button:hover {
   background-color: #A26D5D;
-  border-color: #363131; }
+  border-color: #363131;
 }
 
 .apply-button {
@@ -276,27 +232,22 @@ body {
   margin-bottom: 350px;
 }
 
+.edit-form label {
+  font-size: 30px;
+  font-weight: bold;
+}
+
 .form-controls {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
 }
 
-.form-controls {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around; }
-
 .create-input,
 .edit-input {
   margin-bottom: 15px;
   font-size: 20px;
-  font-weight: bold; }
-
-
-.create-input,
-.edit-input {
-  margin-bottom: 15px;
+  font-weight: bold;
 }
 
 .form-label {
@@ -309,6 +260,9 @@ body {
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
+}
+
+.edit-input input[type=text] {
   width: calc(100% - 22px); /* Adjusted to account for padding and border */
   font-size: 20px;
   font-weight: lighter;
@@ -354,36 +308,44 @@ body {
   border: 2px solid red;
 }
 
-.edit-input input [type="text"]:hover {
-  cursor: pointer; }
+.edit-input input [type=text]:hover {
+  cursor: pointer;
+}
 
 .size-selector {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 .size-option input {
   width: 13px;
   height: 13px;
-  margin-right: 5px; }
+  margin-right: 5px;
+}
 
 .err-container {
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+}
 
 .err-container div {
-  width: 80%; }
+  width: 80%;
+}
 
 .err {
   color: red;
-  font-size: 14px; }
+  font-size: 14px;
+}
 
 .create-input input.invalid-input,
 .edit-input input.invalid-input {
-  border: 2px solid red; }
+  border: 2px solid red;
+}
 
 .size-selector.invalid-input {
-  border: 2px solid red; }
+  border: 2px solid red;
+}
 
 .stock-filter,
 .price-filter {
@@ -451,33 +413,41 @@ body {
   padding-left: 20px;
   align-items: center;
   flex-direction: column;
-  padding-right: 20px; }
+  padding-right: 20px;
+}
 
 .filter-button > h1 {
   font-size: 20px;
-  font-family: Times New Roman, Serif, serif; }
+  font-family: Times New Roman, Serif, serif;
+}
 
 .filter-icon:hover {
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 .filter-icon > img {
   width: 55px;
-  height: 55px; }
+  height: 55px;
+}
 
 .filter-container {
   width: 150px;
-  border: none; }
+  border: none;
+}
 
 .filter-container > fieldset {
   position: relative;
-  border: none; }
+  border: none;
+}
 
 .filter-box {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
-input[type="checkbox"] {
-  background-color: black; }
+input[type=checkbox] {
+  background-color: black;
+}
 
 /*
     Styling for checkboxes from w3schools
